fix overflow problem

--- a/_assets/css/_grid.css
+++ b/_assets/css/_grid.css
@@ -1,20 +1,6 @@
-/* .container {
-  max-width: 1540px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-@screen xl {
-  .container {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-} */
-
 .container {
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .row {
