--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -20,7 +20,7 @@ body {
 
 #background {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   z-index: -1;
   transition: all 0.5s linear;
   position: fixed;
@@ -28,6 +28,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+  overflow: hidden;
 }
 
 .transitionBackground {
